--- a/TiendaGenerica/src/main/resources/templates/reports/customerslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/customerslist.html
@@ -98,7 +98,7 @@ h1 {
 				</div>
 			  </div>
 		  </nav>
-		  <h3 style="align-items: center; justify-content: center; display: flex; margin-top: 30px;">Listado de Usuarios</h3>
+		  <h3 style="align-items: center; justify-content: center; display: flex; margin-top: 30px;">Listado de Clientes</h3>
 
 	<table class="table" style="margin-top: 50px;">
 		<thead class="table"></thead>
